--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,14 @@
 # JWT Secret Key used for signing and verifying JSON Web Tokens
-JWT_SECRET=
+JWT_SECRET=rudraSharma
 
 # MongoDB connection string for connecting to the database
-MONGODB_URL=
+MONGODB_URL="mongodb+srv://rupesh49ugcs20:xMDbsqSIKsyWyttg@cluster0.erkbrn4.mongodb.net/StudyNotionDB"
 
 # Hostname of the mail server used for sending emails
-MAIL_HOST=
+MAIL_HOST=smtp.gmail.com
 
 # Username of the email account used for sending emails
-MAIL_USER=
+MAIL_USER=rudrasharma405@gmail.com
 
 # Password of the email account used for sending emails
-MAIL_PASS=
+MAIL_PASS=trixetwczqiejzin
