--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,14 @@
 # JWT Secret Key used for signing and verifying JSON Web Tokens
-JWT_SECRET=rudraSharma
+JWT_SECRET=""
 
 # MongoDB connection string for connecting to the database
-MONGODB_URL="mongodb+srv://rupesh49ugcs20:xMDbsqSIKsyWyttg@cluster0.erkbrn4.mongodb.net/StudyNotionDB"
+MONGODB_URL=""
 
 # Hostname of the mail server used for sending emails
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=""
 
 # Username of the email account used for sending emails
-MAIL_USER=rudrasharma405@gmail.com
+MAIL_USER=""
 
 # Password of the email account used for sending emails
-MAIL_PASS=trixetwczqiejzin
+MAIL_PASS=""
